@@ -18,6 +18,7 @@ use Mojo::JSON::Pointer;
 use Mojo::URL;
 use Safe::Isa;
 use Path::Tiny;
+use Storable 'dclone';
 use File::ShareDir 'dist_dir';
 use Moo;
 use MooX::TypeTiny 0.002002;
@@ -188,6 +189,14 @@ sub evaluate {
     result => $result,
     errors => $state->{errors},
   );
+}
+
+sub get {
+  my ($self, $uri) = @_;
+
+  my ($subschema, $canonical_uri) = $self->_fetch_schema_from_uri($uri);
+  $subschema = dclone($subschema) if is_ref($subschema);
+  return !defined $subschema ? () : wantarray ? ($subschema, $canonical_uri) : $subschema;
 }
 
 ######## NO PUBLIC INTERFACES FOLLOW THIS POINT ########
@@ -1440,6 +1449,15 @@ provided (and if not, C<''> will be used if no other identifier can be found wit
 You B<MUST> call C<add_schema> for any external resources that a schema may reference via C<$ref>
 before calling L</evaluate>, other than the standard metaschemas which are loaded from a local cache
 as needed.
+
+=head2 get
+
+  my $schema = $js->get($uri);
+  my ($schema, $canonical_uri) = $js->get($uri);
+
+Fetches the Perl data structure representing the JSON Schema at the indicated URI. When called in
+list context, the canonical URI of that location is also returned, as a L<Mojo::URL>. Returns
+C<undef> if the schema with that URI has not been loaded (or cached).
 
 =head1 LIMITATIONS
 
