@@ -3,6 +3,7 @@ Revision history for JSON-Schema-Draft201909
 {{$NEXT}}
           - fixed error generation for validator keywords with numeric
             arguments (e.g. minimum, multipleOf)
+          - new "get" method for fetching the schema found at a URI
 
 0.009     2020-07-07 19:54:44Z
           - no longer allowing adding another schema document with a duplicate
